@@ -49,7 +49,7 @@ public class AlphaTest extends GdxTest {
 		batch.draw(texture, 0, 0, Gdx.graphics.getWidth(), Gdx.graphics.getHeight());
 		batch.end();
 		
-		Pixmap pixmap = ScreenUtils.getFrameBufferPixmap(0,  0,  Gdx.graphics.getWidth(), Gdx.graphics.getHeight());
+		Pixmap pixmap = Pixmap.createFromFrameBuffer(0,  0,  Gdx.graphics.getWidth(), Gdx.graphics.getHeight());
 		int color = pixmap.getPixel(0, pixmap.getHeight() - 1);
 		Gdx.app.log("AlphaTest", Integer.toHexString(color));
 		pixmap.dispose();
